[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boask"
version = "1.0.0"
description = "Pure Python website engine. Zero dependencies. Real JSX templates."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["web", "framework", "minimal", "jsx", "python", "no-dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/OXOPSoftware/boask"
Repository = "https://github.com/OXOPSoftware/boask"
Issues = "https://github.com/OXOPSoftware/boask/issues"

[tool.hatch.build.targets.wheel]
packages = ["boask"]