[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boask"
version = "1.0.1 - Bugfixes"
description = "Pure Python website engine. Zero dependencies. Real JSX templates."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "OXOP", email = "SHUTUP@SHUPUP.COM" },
]
keywords = ["web", "minimal", "jsx", "python", "no-dependencies"]

[project.urls]
Homepage = "https://github.com/OXOPSoftware/boask"

[tool.hatch.build.targets.wheel]

packages = ["boask"]
